--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-loader": "^16.2.0"
+    },
+    "dependencies": {
+        "vue": "^3.2.47",
+        "vue-axios": "^3.5.2",
+        "vue-router": "^4.1.6",
+        "vue-template-compiler": "^2.7.14"
     }
 }
