--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
         "@popperjs/core": "^2.11.6",
         "@vuelidate/core": "^2.0.0",
         "@vuelidate/validators": "^2.0.0",
+        "@vuepic/vue-datepicker": "^4.2.2",
         "bootstrap": "^5.2.3",
-        "bootstrap-vue-3": "^0.5.1",
+        "bootstrap-vue-next": "^0.7.3",
         "sass": "^1.58.3",
         "sass-loader": "^13.2.0",
         "simplebar-vue": "^2.3.0",
         "sweetalert2": "^11.7.3",
         "vue": "^3.2.47",
         "vue-axios": "^3.5.2",
+        "vue-draggable-next": "^2.1.1",
         "vue-multiselect": "^2.1.7",
         "vue-router": "^4.1.6",
         "vue-template-compiler": "^2.7.14",
+        "vue3-editor": "^0.1.1",
         "vuex": "^4.1.0"
     }
 }
