--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@vuepic/vue-datepicker": "^4.2.2",
         "bootstrap": "^5.2.3",
         "bootstrap-vue-next": "^0.7.3",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.42",
         "sass": "^1.58.3",
         "sass-loader": "^13.2.0",
         "simplebar-vue": "^2.3.0",
