--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "bootstrap": "^5.2.3",
         "bootstrap-vue-next": "^0.7.3",
         "click-outside-vue3": "^4.0.1",
+        "datatables.net": "^1.13.4",
+        "datatables.net-vue3": "^2.1.0",
+        "jquery": "^3.6.4",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.42",
         "sass": "^1.58.3",
@@ -37,6 +40,7 @@
         "vue-multiselect": "^2.1.7",
         "vue-router": "^4.1.6",
         "vue-template-compiler": "^2.7.14",
+        "vue3-apexcharts": "^1.4.1",
         "vue3-editor": "^0.1.1",
         "vuex": "^4.1.0"
     }
